--- a/build.xml
+++ b/build.xml
@@ -17,12 +17,82 @@
 <fileset dir="${lib.dir}" includes="*.jar"/>
 </path>
  
-<target name="prepare">
+<target name="prepare" depends="clean">
 <mkdir dir="${build.dir}"/>
 <mkdir dir="${build.prod.dir}"/>
 <mkdir dir="${build.test.dir}"/>
 </target>
  
-
+<target name="clean">
+<delete dir="${build.dir}"/>
+</target>
  
+<target name="compile" depends="prepare">
+<javac srcdir="${src.dir}" destdir="${build.prod.dir}" classpathref="classpath"/>
+</target>
+
+<target name="compile-tests">
+ 
+<javac srcdir="${unit.test.dir}" destdir="${build.test.dir}">
+<classpath>
+<path refid="classpath"/>
+<pathelement location="${build.prod.dir}"/>
+</classpath>
+</javac>
+<javac srcdir="${system.test.dir}" destdir="${build.test.dir}">
+<classpath>
+<path refid="classpath"/>
+<pathelement location="${build.prod.dir}"/>
+</classpath>
+</javac>
+</target>
+ 
+<property name="test.report.dir" value="${build.dir}/junitreport"/>
+<property name="unit.test.report.dir" value="${build.dir}/junitreport/unit-test"/>
+<property name="system.test.report.dir" value="${build.dir}/junitreport/system-test"/>
+ 
+<target name="run-unit-tests" depends="compile,compile-tests">
+<mkdir dir="${test.report.dir}"/>
+<mkdir dir="${unit.test.report.dir}"/>
+<junit printsummary="yes" errorProperty="test.failed" failureProperty="test.failed">
+<classpath refid="classpath"/>
+ 
+<formatter type="xml"/>
+ 
+<batchtest fork="yes" todir="${unit.test.report.dir}">
+<fileset dir="unit-test/" includes="**/*Test.java"/>
+</batchtest>
+</junit>
+ 
+<junitreport todir="${unit.test.report.dir}">
+<fileset dir="${unit.test.report.dir}" includes="TEST-*.xml"/>
+<report todir="${unit.test.report.dir}"/>
+</junitreport>
+ 
+<fail message="Unit tests failed. Check log and/or reports." if="test.failed"/>
+</target>
+<!--
+<target name="jar" depends="run-unit-tests">
+<jar destfile="${build.jar.dir}/Encrypt.jar" basedir="${build.prod.dir}">
+<manifest>
+<attribute name="Main-Class" value="com.develogical.crypto.Encrypt"/>
+</manifest>
+</jar>
+</target>
+-->
+
+<target name="jar" depends="run-unit-tests">
+
+<jar destfile="${build.jar.dir}/Encrypt.jar" basedir="${build.prod.dir}">
+<manifest>
+<attribute name="Main-Class" value="com.develogical.crypto.Encrypt" />
+</manifest>
+</jar>
+
+</target>
+
+<target name="run" depends="jar">
+<java jar="${build.jar.dir}/Encrypt.jar" fork="true" />
+</target> 
+
 </project>
